Task parent and child addition

--- a/ShagManager/ShagManager/ShagManager.csproj
+++ b/ShagManager/ShagManager/ShagManager.csproj
@@ -59,6 +59,10 @@
     <Compile Include="Migrations\201602231341164_fdata.Designer.cs">
       <DependentUpon>201602231341164_fdata.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602240357412_sdata.cs" />
+    <Compile Include="Migrations\201602240357412_sdata.Designer.cs">
+      <DependentUpon>201602240357412_sdata.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -81,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602231341164_fdata.resx">
       <DependentUpon>201602231341164_fdata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602240357412_sdata.resx">
+      <DependentUpon>201602240357412_sdata.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
