--- a/ShagManager/packages/repositories.config
+++ b/ShagManager/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\ShagCheck\packages.config" />
   <repository path="..\ShagData\packages.config" />
   <repository path="..\ShagManager\packages.config" />
+  <repository path="..\ShagModel\packages.config" />
 </repositories>
